--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/core": "3.4.0",
     "@docusaurus/plugin-content-blog": "^3.4.0",
     "@docusaurus/plugin-ideal-image": "^3.4.0",
+    "@docusaurus/plugin-pwa": "^3.4.0",
     "@docusaurus/plugin-sitemap": "^3.4.0",
     "@docusaurus/preset-classic": "3.4.0",
     "@docusaurus/theme-search-algolia": "^3.4.0",
@@ -26,6 +27,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "clsx": "^2.0.0",
+    "docusaurus-plugin-baidu-tongji": "^0.0.0-beta.4",
     "docusaurus-plugin-image-zoom": "^2.0.0",
     "framer-motion": "^11.2.10",
     "mini-svg-data-uri": "^1.4.4",
